Added the code for search engine

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <style>
+        td {
+            border: 1px solid black;
+        }
+    </style>
     <p>
         <form id="form">
             <label for="query">Query</label>
